# universitybox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MATH.md  README.md  pyproject.toml
tests/: test_dna.py  test_survey.py  test_surveymonkey.py
universitybox/: __init__.py
universitybox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
universitybox/forecast/: __init__.py  _adaptive.py  _base.py  _decomposition.py  _metrics.py  _nonlinear.py  dna.py
universitybox/segments/: __init__.py  club.py
universitybox/survey/: __init__.py  _copula.py  _gui.py  _marginals.py  _nhop.py  _schema.py  _surveymonkey.py  _synthesizer.py  _viz.py
