[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universitybox"
version = "0.1.3"
description = "DNA — Dynamic Nonlinear Adaptive time series forecaster and audience segmentation toolkit"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "UniversityBox Data Team", email = "data@universitybox.it" }
]
keywords = [
    "time-series", "forecasting", "decomposition",
    "kalman-filter", "ridge-regression", "rbf",
    "segmentation", "students", "DNA"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
viz  = ["matplotlib>=3.7"]
data = ["pandas>=2.0"]
full = ["matplotlib>=3.7", "pandas>=2.0"]
dev  = ["pytest>=7", "pandas>=2.0", "matplotlib>=3.7", "build", "twine"]

[project.urls]
Homepage      = "https://github.com/universitybox/universitybox-pkg"
Documentation = "https://github.com/universitybox/universitybox-pkg/blob/main/MATH.md"
Repository    = "https://github.com/universitybox/universitybox-pkg"
"Bug Tracker" = "https://github.com/universitybox/universitybox-pkg/issues"
Changelog     = "https://github.com/universitybox/universitybox-pkg/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["universitybox*"]

[tool.setuptools.package-data]
universitybox = ["py.typed"]
